--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "front-end integrated solution",
   "main": "index.js",
   "bin": {
-    "lanris": "bin/lanris"
+    "lanris": "bin/lanris.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
